# dep-inj

./: Cargo.toml  README.md
dep-inj/: Cargo.toml
dep-inj/src/: lib.rs
doc/: Exploring Design Patterns in Rust Inter-Component Interface Invocation.md
even-api/: Cargo.toml
even-api/src/: lib.rs
even-impl/: Cargo.toml
even-impl/src/: lib.rs
example/even-impl/: Cargo.toml
example/even-impl/src/: lib.rs
example/integrator/: Cargo.toml
example/integrator/src/: main.rs
example/odd-api/: Cargo.toml
example/odd-api/src/: lib.rs
example/odd-impl/src/: lib.rs
integrator/: Cargo.toml
integrator/src/: lib.rs  main.rs
odd-api/src/: lib.rs
odd-impl/: Cargo.toml
odd-impl/src/: lib.rs
the-world/: Cargo.toml
the-world/src/: lib.rs
